fix(neck): add padding to page title on smaller screen sizes

--- a/themes/neck-brace/style.css
+++ b/themes/neck-brace/style.css
@@ -188,7 +188,7 @@ span.toggle-inner {
   }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 930px) {
   .cover-header .entry-header h1 {
     font-size: 15rem;
   }
